HW2: implement pseudo-login using UserServlet.doPost

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
 <section>
-    <form method="get" action="users">
+    <form method="post" action="users">
         <input type="hidden" name="action" value="logUser">
         <label>Select user:
             <select size="2" name="loggedUser">
